--- a/trial1.css
+++ b/trial1.css
@@ -25,6 +25,7 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
+    color: chartreuse;
     transform: translateX(-50%) translateY(-50%);
 
     /* border: 3px solid green; */
