--- a/trial1.css
+++ b/trial1.css
@@ -1,41 +1,21 @@
-body{
+*{
     margin: 0;
     padding: 0;
-    color: white;
+    /* color: white; */
 }
 
 .container-fluid {
-    height: 100vh;
+    height: calc(100vh - 112px);
     width: 100vw;
     /* position: relative; */
 }
 
 .myText {
-    /* display: block; */
-    /* align-items: center;
-    justify-content: center; */
-
-
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color: chartreuse; */
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    color: chartreuse;
-    transform: translateX(-50%) translateY(-50%);
-
-    /* border: 3px solid green; */
-
     /* position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0; */
-  
-    /* margin-top: auto; */
-    /* margin-bottom: auto; */
+    left: 50%; */
+    color: chartreuse;
+    /* transform: translateX(-50%) translateY(-50%); */
 }
+
+.canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #293b5f; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
